syntax = "proto3";
option csharp_namespace = "AttendanceGrpcServer";
import "Protos/schedule.proto";


service Attendancer
{
   rpc  AttendStudents(AttendanceListRequest) returns (AttendanceListResponse);
    rpc GetSchedule(GetScheduleRequest) returns (ScheduleResponse);

}

message AttendanceListRequest {
	repeated int32 sid = 1;
	int32 scheduleId = 2;
	repeated int32 statuses = 3;
}

message AttendanceListResponse {
	repeated int32 sid = 1;
	string message = 2;
}

